--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
 <body>
 <!-- Menu toggle button-->
+<div id="toggle-container">
  <div id="toggle-btn">&#9776;</div>
+ <a href="/static/cv/Resume-Justyna-Gredecka.docx" download id="mobile-download" class="fas fa-cloud-download-alt"> Resume</a>
+</div>
 <!-- Side navigation -->
  <div class="vertical-menu" id="verticalMenu">
   <div id="close-btn">&times;</div>
@@ -235,8 +238,8 @@
      <br><br>
      <div class="other-info">
       <p class="footnote">Thank you for reading!</p><br>
-      <a href ="https://www.linkedin.com/in/gredecka/" class="fab fa-linkedin-in other-icons"></a>
-      <a href="https://github.com/jgredecka" class="fab fa-github other-icons"></a>
+      <a href ="https://www.linkedin.com/in/gredecka/" class="fab fa-linkedin-in other-icons icon-pad"></a>
+      <a href="https://github.com/jgredecka" class="fab fa-github other-icons icon-pad"></a>
       <a href="https://stackoverflow.com/users/10213506/jrg" class="fab fa-stack-overflow other-icons"></a>
       <br><br>
       <p>2019 &copy; Justyna Gredecka</p>
