--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- Menu toggle button-->
 <div id="toggle-container">
  <div id="toggle-btn">&#9776;</div>
- <a href="/static/cv/Resume-Justyna-Gredecka.docx" download id="mobile-download" class="fas fa-cloud-download-alt"> Resume</a>
+ <a href="/static/cv/Resume-Justyna-Gredecka.pdf" download id="mobile-download" class="fas fa-cloud-download-alt"> Resume</a>
 </div>
 <!-- Side navigation -->
  <div class="vertical-menu" id="verticalMenu">
@@ -42,7 +42,7 @@
   <br>
 	<a href="#contact" class="link-animation">Contact</a>
   <br><br>
-   <a href="/static/cv/Resume-Justyna-Gredecka.docx" download id="cv-download" class="fas fa-cloud-download-alt">
+   <a href="/static/cv/Resume-Justyna-Gredecka.pdf" download id="cv-download" class="fas fa-cloud-download-alt">
      <br>
      <p id="download-text">Download CV</p>
    </a>
