--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
       <div class="col-lg-6 display-flex mb-2">
        <div class="card" id="kinbase-card">
        <div class="card-header">
-        <h5>KinBase</h5><span style="font-size:10px; color:black; position: absolute; top: 34px;">(under construction)</span>
-        <a href="#" id="kinbase-github" class="fab fa-github" data-toggle="tooltip" data-placement="top" title="Source Code"></a>
-        <a href="#" id="kinbase-web" class="fas fa-globe" data-toggle="tooltip" data-placement="top" title="Visit Website"></a>
+        <h5>KinBase</h5>
+        <a href="https://github.com/jgredecka/KinBase" id="kinbase-github" class="fab fa-github" data-toggle="tooltip" data-placement="top" title="Source Code"></a>
+        <a href="https://kinbase.pythonanywhere.com" id="kinbase-web" class="fas fa-globe" data-toggle="tooltip" data-placement="top" title="Visit Website"></a>
        </div>
        <div class="card-body">
         <p class="card-text card-custom"><i class="fas fa-check kinbase-check"></i> Web app enabling users to search for data on protein kinases and related molecules.<br><br><i class="fas fa-check kinbase-check"></i> Built with the microframework Flask.<br><br><i class="fas fa-check kinbase-check"></i> SQLAlchemy used as an ORM to query and retrieve data stored in SQLite database.</p>
