update QMUL results

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
      <!-- Bioinformatics course information-->
      <div id="qmulInfo" class="university-info">
        <p class="uni-style">2018 - 2019, <a id="uni-link" href="https://www.qmul.ac.uk">Queen Mary University of London</a>, London, UK</p>
-       <p><span class="fas fa-check"></span> Predicted Distinction, having achieved between 79% and 97% across all taught modules.</p>
+       <p><span class="fas fa-check"></span> Achieved Distinction, with an average of 86% across all modules.</p>
        <p><span class="fas fa-check"></span> Successfully developed the web application KSEAPlus as an individual project, improving my ability to work independently and on own initative while meeting deadlines.</p>
        <p><span class="fas fa-check"></span> Participated in the software group project 'KinBase' where I was responsible for full-stack web development.</p>
        <p><span class="fas fa-check"></span> Practised data science techniques on large datasets including machine learning in R.</p>
