--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    <div id="summary-section">
      <h3>About Me</h3>
       <hr>
-      <p>I am a recent Bioinformatics graduate at Queen Mary Univeristy of London. I have experience developing tools using Python and am proficient in full stack web development. I enjoy learning new technologies and using programming to solve challenging problems independently and as part of a team.
+      <p>I am a Full Stack Software Engineer with experience developing modern web applications using various back-end and front-end frameworks inlcuding React.js, Flask and Django. I also have experience using Python to manipulate and analyse complex bioinformatics data. I enjoy learning new technologies and solving challenging problems independently and as part of a team.
       </p>
    </div>
    <br>
@@ -61,64 +61,123 @@
     <!-- Bootstrap card combined with nav tabs to display relevant skills -->
     <h3>Skills</h3>
     <hr>
-    <p>Below are the main technical skills I have developed through several projects.</p>
     <br>
     <div class="card" id="skills-card">
     <div class="card-header">
     <ul class="nav nav-pills card-header-pills" id="pills-tab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active mb-3" id="pills-languages-tab" data-toggle="pill" href="#pills-languages" role="tab" aria-controls="pills-languages" aria-selected="true"><i class="fas fa-laptop"></i> Languages</a>
+      <a class="nav-link active mb-3" id="pills-languages-tab" data-toggle="pill" href="#pills-languages" role="tab" aria-controls="pills-languages" aria-selected="true">
+        <i class="fas fa-laptop"></i> 
+      Languages
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-web-tab" data-toggle="pill" href="#pills-web" role="tab" aria-controls="pills-web" aria-selected="false"><i class="fas fa-code"></i> Web Development</a>
+      <a class="nav-link mb-3" id="pills-web-tab" data-toggle="pill" href="#pills-web" role="tab" aria-controls="pills-web" aria-selected="false">
+        <i class="fas fa-code"></i> 
+      Web Frameworks
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-tools-tab" data-toggle="pill" href="#pills-tools" role="tab" aria-controls="pills-tools" aria-selected="false"><i class="fas fa-wrench"></i> Tools</a>
+      <a class="nav-link mb-3" id="pills-tools-tab" data-toggle="pill" href="#pills-tools" role="tab" aria-controls="pills-tools" aria-selected="false">
+        <i class="fas fa-wrench"></i> 
+      Libraries
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-db-tab" data-toggle="pill" href="#pills-db" role="tab" aria-controls="pills-db" aria-selected="false"><i class="fas fa-database"></i> Databases</a>
+      <a class="nav-link mb-3" id="pills-db-tab" data-toggle="pill" href="#pills-db" role="tab" aria-controls="pills-db" aria-selected="false">
+        <i class="fas fa-database"></i> 
+      Databases
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-version-tab" data-toggle="pill" href="#pills-version" role="tab" aria-controls="pills-version" aria-selected="false"><i class="fas fa-code-branch"></i> Version Control</a>
+      <a class="nav-link mb-3" id="pills-version-tab" data-toggle="pill" href="#pills-version" role="tab" aria-controls="pills-version" aria-selected="false">
+        <i class="fas fa-code-branch"></i> 
+      Version Control
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-os-tab" data-toggle="pill" href="#pills-os" role="tab" aria-controls="pills-os" aria-selected="false"><i class="fab fa-linux"></i> O/S</a>
+      <a class="nav-link mb-3" id="pills-os-tab" data-toggle="pill" href="#pills-os" role="tab" aria-controls="pills-os" aria-selected="false">
+        <i class="fab fa-linux"></i> 
+      O/S
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-cloud-tab" data-toggle="pill" href="#pills-cloud" role="tab" aria-controls="pills-cloud" aria-selected="false"><i class="fas fa-cloud"></i> Cloud Computing</a>
+      <a class="nav-link mb-3" id="pills-cloud-tab" data-toggle="pill" href="#pills-cloud" role="tab" aria-controls="pills-cloud" aria-selected="false">
+        <i class="fas fa-cloud"></i> 
+      Cloud Computing
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-hpc-tab" data-toggle="pill" href="#pills-hpc" role="tab" aria-controls="pills-hpc" aria-selected="false"><i class="fas fa-server"></i> HPC</a>
+      <a class="nav-link mb-3" id="pills-hpc-tab" data-toggle="pill" href="#pills-hpc" role="tab" aria-controls="pills-hpc" aria-selected="false">
+        <i class="fas fa-server"></i> 
+      HPC
+      </a>
     </li>
      <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-data-tab" data-toggle="pill" href="#pills-data" role="tab" aria-controls="pills-data" aria-selected="false"><i class="far fa-chart-bar"></i> Data Science</a>
+      <a class="nav-link mb-3" id="pills-data-tab" data-toggle="pill" href="#pills-data" role="tab" aria-controls="pills-data" aria-selected="false">
+        <i class="far fa-chart-bar"></i> 
+      Data Science
+      </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link mb-3" id="pills-software-tab" data-toggle="pill" href="#pills-software" role="tab" aria-controls="pills-software" aria-selected="false"><i class="fas fa-cube"></i> Software</a>
+      <a class="nav-link mb-3" id="pills-software-tab" data-toggle="pill" href="#pills-software" role="tab" aria-controls="pills-software" aria-selected="false">
+        <i class="fas fa-cube"></i> 
+      Software
+      </a>
     </li>
     </ul>
    </div>
   <div class="card-body tab-content" id="pills-tabContent">
     <div class="tab-pane fade show active" id="pills-languages" role="tabpanel" aria-labelledby="pills-languages-tab">
-      <p>Python <span class="sep">/</span> Bash <span class="sep">/</span> R</p></div>
+      <p>
+        Python <span class="sep">/</span> JavaScript (ES5, ES6) <span class="sep">/</span> Bash
+      </p>
+    </div>
     <div class="tab-pane fade" id="pills-web" role="tabpanel" aria-labelledby="pills-web-tab">
-      <p>Flask <span class="sep">/</span> HTML5 <span class="sep">/</span> CSS3 <span class="sep">/</span> JavaScript (front-end) <span class="sep">/</span> jQuery <span class="sep">/</span> JSON <span class="sep">/</span> Bootstrap 4</p></div>
+      <p>
+        <span class="accent">Backend</span>: Flask <span class="sep">/</span> FlaskRestPlus <span class="sep">/</span> DjangoREST <span class="sep">/</span><span class="accent"> Frontend</span>: React.js <span class="sep">/</span><span class="accent"> Desktop</span>: Electron
+      </p>
+    </div>
     <div class="tab-pane fade" id="pills-tools" role="tabpanel" aria-labelledby="pills-tools-tab">
-      <p>pandas <span class="sep">/</span> NumPy <span class="sep">/</span> Celery <span class="sep">/</span> RQ <span class="sep">/</span> SQLAlchemy <span class="sep">/</span> Gunicorn <span class="sep">/</span> redis-py <span class="sep">/</span> Docker</p></div>
+      <p>
+        redux <span class="sep">/</span> Celery <span class="sep">/</span> RQ <span class="sep">/</span> SQLAlchemy <span class="sep">/</span> Docker <span class="sep">/</span> Styled Components <span class="sep">/</span> Material UI <span class="sep">/</span> Bootstrap
+      </p>
+    </div>
     <div class="tab-pane fade" id="pills-db" role="tabpanel" aria-labelledby="pills-db-tab">
-      <p>Redis</p></div>
+      <p>
+        <span class="accent">NoSQL</span>: Redis <span class="sep">/</span> DynamoDB <span class="sep">/</span><span class="accent"> SQL</span>: PostgreSQL
+      </p>
+    </div>
     <div class="tab-pane fade" id="pills-version" role="tabpanel" aria-labelledby="pills-version-tab">
-      <p>Git <span class="sep">/</span> GitHub</p></div>
+      <p>
+        Git <span class="sep">/</span> GitHub
+      </p>
+    </div>
     <div class="tab-pane fade" id="pills-os" role="tabpanel" aria-labelledby="pills-os-tab">
-      <p>Unix (Mac OS X and Linux) <span class="sep">/</span> Windows</p></div>
+      <p>
+        Unix (Mac OS X and Linux) <span class="sep">/</span> Windows
+      </p>
+    </div>
     <div class="tab-pane fade" id="pills-cloud" role="tabpanel" aria-labelledby="pills-cloud-tab">
-      <p>Heroku <span class="sep">/</span> AWS Beanstalk</p></div>
+      <p>
+        <span class="accent">PaaS</span>: Heroku <span class="sep">/</span> PythonAnywhere <span class="sep">/</span> <span class="accent">Iaas</span>: AWS
+      </p>
+    </div>
     <div class="tab-pane fade" id="pills-hpc" role="tabpanel" aria-labelledby="pills-hpc-tab">
-      <p>High-Performance Computing cluster (QMUL Apocrita) for large data processing</p></div>
+      <p>
+        High-Performance Computing cluster (QMUL Apocrita) for large data processing
+      </p>
+    </div>
       <div class="tab-pane fade" id="pills-data" role="tabpanel" aria-labelledby="pills-data-tab">
-      <p>SciPy<span class="sep">/</span> matplotlib<span class="sep">/</span> seaborn <span class="sep">/</span> pyplot</p></div>
+        <p>
+          pandas <span class="sep">/</span> NumPy <span class="sep">/</span> SciPy <span class="sep">/</span> matplotlib <span class="sep">/</span> seaborn <span class="sep">/</span> pyplot
+        </p>
+      </div>
     <div class="tab-pane fade" id="pills-software" role="tabpanel" aria-labelledby="pills-software-tab">
-      <p>Jupyter Notebook<span class="sep">/</span> Adobe Illustrator <span class="sep">/</span> Sublime Text</p></div>
+      <p>
+        Jira<span class="sep">/</span> Jupyter Notebook<span class="sep">/</span> PyCharm <span class="sep">/</span> Sublime Text
+      </p>
+    </div>
   </div>
 </div>
    </div>
@@ -127,7 +186,6 @@
     <!-- Bootstrap cards giving university project highlights. Use of Bootstrap columns ensures responsive layout. -->
      <h3>Projects</h3>
      <hr>
-     <p>I have had the opportunity to undertake both individual and group projects throughout my course.</p>
      <br>
      <div class="row">
       <div class="col-lg-6 display-flex mb-2">
@@ -181,6 +239,68 @@
      </div>
    </div>
    <br><br>
+   <!-- Employment information with collapsible div-->
+   <h3>Employment</h3>
+   <hr>
+     <div id="ccg" class="course-info">
+       Cambridge Cancer Genomics
+       <div id="ccg-extend" class="fas fa-plus"></div>
+       <div id="ccg-collapse" class="fas fa-minus"></div>
+     </div>
+     <div class="placeholder"></div>
+     <div id="ccgInfo" class="university-info">
+       <p class="uni-style">2019-current, Full Stack Software Engineer at<a class="uni-link" href="https://www.ccg.ai/"> CCG</a>, Cambridge, UK
+       </p>
+       <p>
+         <span class="fas fa-check"></span> 
+         Contributed to the front-end and back-end development of <a class="uni-link" href="https://www.ccg.ai/oncos">OncOS</a>, a precision oncology web-based platform, using the frameworks Flask-RESTPlus and React.js.
+       </p>
+       <p>
+         <span class="fas fa-check"></span> 
+         Helped implement new features in OncOS desktop app using Electron and React.js frameworks.
+       </p>
+       <p>
+         <span class="fas fa-check"></span> 
+         Designed, implemeneted and wrote unit tests for OncOS REST APIs and services around them.
+       </p>
+       <p>
+         <span class="fas fa-check"></span> 
+         As an active member of the Scrum team, took part in daily standups, sprint-planning and retrospective meetings. Used Jira as project management tool for each sprint.
+       </p>
+       <p>
+         <span class="fas fa-check"></span> 
+         Participated in regular code reviews within the OncOS team improving my ability to write production-level code as well as critically review others' code.
+       </p>
+       <p>
+        <span class="fas fa-check"></span> 
+        Volunteered as an assistant for the Code First Girls: Introduction to Web Development 2020 course.
+       </p>
+     </div>
+     <div class="placeholder"></div>
+   <div id="mrc" class="course-info">
+     MRC LMB
+     <div id="mrc-extend" class="fas fa-plus"></div>
+     <div id="mrc-collapse" class="fas fa-minus"></div>
+   </div>
+     <div class="placeholder"></div>
+     <div id="mrcInfo" class="university-info">
+       <p class="uni-style">2015-2018, Research Assistant at
+         <a class="uni-link" href="https://www2.mrc-lmb.cam.ac.uk"> MRC LMB</a>, Cambridge, UK
+       </p>
+       <p>
+         <span class="fas fa-check"></span> 
+         Worked independently and as part of a team to analyse and report high-throughput biological (genotyping) data.
+       </p>
+       <p>
+         <span class="fas fa-check"></span> 
+         Developed good problem-solving skills by troubleshooting analytical issues in software and automated robotic systems.
+       </p>
+       <p>
+        <span class="fas fa-check"></span> 
+        Optimised, maintained and updated experimental protocols in the Filemaker database.
+       </p>
+     </div>
+   <br><br>
    <div id="education-section">
     <!-- Collapsible DIVs containing course highlights for each university degree.-->
      <h3>Education</h3>
@@ -193,7 +313,7 @@
      <div class="placeholder"></div>
      <!-- Bioinformatics course information-->
      <div id="qmulInfo" class="university-info">
-       <p class="uni-style">2018 - 2019, <a id="uni-link" href="https://www.qmul.ac.uk">Queen Mary University of London</a>, London, UK</p>
+       <p class="uni-style">2018 - 2019, <a class="uni-link" href="https://www.qmul.ac.uk">Queen Mary University of London</a>, London, UK</p>
        <p><span class="fas fa-check"></span> Achieved Distinction, with an average of 86% across all modules.</p>
        <p><span class="fas fa-check"></span> Successfully developed the web application KSEAPlus as an individual project, improving my ability to work independently and on own initative while meeting deadlines.</p>
        <p><span class="fas fa-check"></span> Participated in the software group project 'KinBase' where I was responsible for full-stack web development.</p>
@@ -208,41 +328,26 @@
      <div class="placeholder"></div>
      <!-- Biomedical Science course information-->
      <div id="aruInfo" class="university-info">
-       <p class="uni-style">2012 - 2015, <a id="uni-link" href="https://aru.ac.uk">Anglia Ruskin University</a>, Cambridge, UK</p>
+       <p class="uni-style">2012 - 2015, <a class="uni-link" href="https://aru.ac.uk">Anglia Ruskin University</a>, Cambridge, UK</p>
        <p><span class="fas fa-check"></span> Achieved a First-Class degree classification.</p>
        <p><span class="fas fa-check"></span> Developed excellent numerical and analytical skills, scoring 87% in the statistical analysis module.</p>
        <p><span class="fas fa-check"></span> Participated in a Scientific Conference at ARU and presented a poster as part of a team.</p>
      </div>
    </div>
    <br><br>
-   <div id="employment-section"></div>
-   <!-- Employment information with collapsible div-->
-   <h3>Employment</h3>
-   <hr>
-   <div id="mrc" class="course-info">MRC LMB
-     <div id="mrc-extend" class="fas fa-plus"></div>
-     <div id="mrc-collapse" class="fas fa-minus"></div>
-     </div>
-     <div class="placeholder"></div>
-     <div id="mrcInfo" class="university-info">
-       <p class="uni-style">2015-2018, Research Assistant at<a id="uni-link" href="https://www2.mrc-lmb.cam.ac.uk"> MRC LMB</a>, Cambridge, UK</p>
-       <p><span class="fas fa-check"></span> Worked independently and as part of a team to analyse and report high-throughput biological (genotyping) data.</p>
-       <p><span class="fas fa-check"></span> Developed good problem-solving skills by troubleshooting analytical issues in software and automated robotic systems.</p>
-       <p><span class="fas fa-check"></span> Optimised, maintained and updated experimental protocols in the Filemaker database.</p>
-     </div>
-   <br><br>
    <div id="contact-section"></div>
      <h3>Contact</h3>
      <hr>
-     <p>If you would like to learn more about my projects, ask any questions or just reach out to say hello, feel free to contact me at <a id="email-link" href="mailto:justynagredecka@outlook.com">justynagredecka@outlook.com.</a></p>
+     <p>If you would like to learn more about my projects, ask any questions or just reach out to say hello, feel free to contact me at <a id="email-link" href="mailto:justynagredecka@outlook.com">justynagredecka@outlook.com.</a>
+     </p>
      <br><br>
      <div class="other-info">
-      <p class="footnote">Thank you for reading!</p><br>
-      <a href ="https://www.linkedin.com/in/gredecka/" class="fab fa-linkedin-in other-icons icon-pad"></a>
-      <a href="https://github.com/jgredecka" class="fab fa-github other-icons icon-pad"></a>
-      <a href="https://stackoverflow.com/users/10213506/jrg" class="fab fa-stack-overflow other-icons"></a>
-      <br><br>
-      <p>2019 &copy; Justyna Gredecka</p>
+       <p class="footnote">Thank you for reading!</p><br>
+       <a href ="https://www.linkedin.com/in/gredecka/" class="fab fa-linkedin-in other-icons icon-pad"></a>
+       <a href="https://github.com/jgredecka" class="fab fa-github other-icons icon-pad"></a>
+       <a href="https://stackoverflow.com/users/10213506/jrg" class="fab fa-stack-overflow other-icons"></a>
+       <br><br>
+       <p>2020 &copy; Justyna Gredecka</p>
      </div>
      <br>
 </div>
@@ -263,6 +368,8 @@ checkViewport(x) // Call listener function at run time
 x.addListener(checkViewport) // Attach listener function on state changes
 
 // Show/hide information on university courses and employment history.
+
+// Education
 document.getElementById("qmulInfo").style.display = "none";
 var qmul = document.getElementById("bioInfo");
 qmul.addEventListener("click", qmulShow);
@@ -271,9 +378,14 @@ document.getElementById("aruInfo").style.display = "none";
 var aru = document.getElementById("bioMed");
 aru.addEventListener("click", aruShow);
 
+// Employment
 document.getElementById("mrcInfo").style.display = "none";
 var lmb = document.getElementById("mrc");
 lmb.addEventListener("click", mrcShow);
+
+document.getElementById("ccgInfo").style.display = "none";
+var ccg = document.getElementById("ccg");
+ccg.addEventListener("click", ccgShow);
 
 // Jumps to a relevant body section ID when the corresponding navigational link is clicked.
 var items = document.getElementsByClassName("link-animation");
