fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
    <div id="summary-section">
      <h3>About Me</h3>
       <hr>
-      <p>I am a Full Stack Software Engineer with experience developing modern web applications using various back-end and front-end frameworks inlcuding React.js, Flask and Django. I also have experience using Python to manipulate and analyse complex bioinformatics data. I enjoy learning new technologies and solving challenging problems independently and as part of a team.
+      <p>I am a Full Stack Software Engineer with experience developing modern web applications using various back-end and front-end frameworks including React.js, Flask and Django. I also have experience using Python to manipulate and analyse complex bioinformatics data. I enjoy learning new technologies and solving challenging problems independently and as part of a team.
       </p>
    </div>
    <br>
