force externa links to open in a new tab

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
        <div class="project-card blue">
          <div class="card-custom-title">KSEAPlus</div>
          <br>
-         <a href="https://github.com/jgredecka/KSEAPlus"><i class="fab fa-github-square"></i></a>
+         <a target="_blank" href="https://github.com/jgredecka/KSEAPlus"><i class="fab fa-github-square"></i></a>
          <br><br>
          <div class="web-app-btn">
            <a href="https://ksea-plus.herokuapp.com/">
@@ -226,7 +226,7 @@
        <div class="project-card purple">
          <div class="card-custom-title">KinBase</div>
          <br>
-         <a href="https://github.com/jgredecka/KinBase">
+         <a target="_blank" href="https://github.com/jgredecka/KinBase">
            <i class="fab fa-github-square"></i>
          </a>
          <br><br>
