modify nav pill content

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <li class="nav-item">
       <a class="nav-link mb-3" id="pills-web-tab" data-toggle="pill" href="#pills-web" role="tab" aria-controls="pills-web" aria-selected="false">
         <i class="fas fa-code"></i> 
-      Web Frameworks
+      App Development
       </a>
     </li>
     <li class="nav-item">
       <a class="nav-link mb-3" id="pills-tools-tab" data-toggle="pill" href="#pills-tools" role="tab" aria-controls="pills-tools" aria-selected="false">
         <i class="fas fa-wrench"></i> 
-      Libraries
+      Tools
       </a>
     </li>
     <li class="nav-item">
@@ -139,7 +139,7 @@
     </div>
     <div class="tab-pane fade" id="pills-tools" role="tabpanel" aria-labelledby="pills-tools-tab">
       <p>
-        redux <span class="sep">/</span> Celery <span class="sep">/</span> RQ <span class="sep">/</span> SQLAlchemy <span class="sep">/</span> Docker <span class="sep">/</span> Styled Components <span class="sep">/</span> Material UI <span class="sep">/</span> Bootstrap
+        redux <span class="sep">/</span> axios <span class="sep">/</span> Celery <span class="sep">/</span> RQ <span class="sep">/</span> SQLAlchemy <span class="sep">/</span> Docker <span class="sep">/</span> Styled Components <span class="sep">/</span> Material UI <span class="sep">/</span> Bootstrap <span class="sep">/</span> Swagger
       </p>
     </div>
     <div class="tab-pane fade" id="pills-db" role="tabpanel" aria-labelledby="pills-db-tab">
